# target-jsonl

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_jsonl/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
